syntax = "proto3";
package kratos.api;

option go_package = "tx-builder/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  string blockSpiderServer = 1;
  string nodeProxyServer = 2;
  string walletServer = 3;
  string chainConfigFile = 4;
}
